pkg/kgateway/translator/gateway/testutils/inputs/traffic-policy/oauth2-jwks-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: test
  hostnames:
  - "test.com"
  rules:
  - name: rule0
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
